--- a/about/index.html
+++ b/about/index.html
@@ -90,19 +90,19 @@
         </div><!-- /.site-header-five__wrapper -->
 
         <section class="banner-four">
-            <img src="../assets/images/newImages/img7.jpg" class="banner-four__moc" alt="">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="banner-four__content">
-                            <h4>About Manna <span>New</span></h4>
-                            <h3>We are bringing <br>
-                                <span>Food to You</span></h3>
-                            <h3>While solving waste.</h3>
-                        </div><!-- /.banner-four__content -->
-                    </div><!-- /.col-lg-12 -->
-                </div><!-- /.row -->
-            </div><!-- /.container -->
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-12">
+                            <div class="banner-four__content">
+                                <h4>About Manna <span>New</span></h4>
+                                <h3>Food has an expiry date <br>
+                                    <span>our planet shouldn't</span></h3>
+                                <p>The food industry is unsustainable in its attitudes towards waste. Karma is changing this whilst helping to turn surplus into a business opportunity.</p>
+                                <a href="#" class="thm-btn banner-two__btn">Order my Box <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
+                            </div><!-- /.banner-two__content -->
+                        </div><!-- /.col-xl-7 -->
+                    </div><!-- /.row -->
+                </div><!-- /.container -->
         </section><!-- /.banner-four -->
 
         <section class="service-five margin-none">
@@ -115,10 +115,8 @@
                                     <i class="far fa-chart-line"></i>
                                 </div><!-- /.service-five__icon -->
                                 <h3><a href="#">Food Waste Problem</a></h3>
-                                <p>Sed ut perspiciatis unde omnis iste
-                                    natus error sit voluptatem accusante
-                                    um doloremque laudantium totam
-                                    rem aperiam eaque ipsa </p>
+                                <p>One third of all food produced is thrown away annually, resulting in 1.3 billion tonnes of waste worldwide. It’s one of the largest climate and economic issues facing our planet creating a massive business opportunity.
+                                        In fact, if food waste was a country, it would be the 3rd biggest CO2 emission contributing country in the world.</p>
                             </div><!-- /.service-five__single-inner -->
                         </div><!-- /.service-five__single -->
                     </div><!-- /.col-lg-4 -->
@@ -129,10 +127,7 @@
                                     <i class="far fa-rss"></i>
                                 </div><!-- /.service-five__icon -->
                                 <h3><a href="#">The Solution</a></h3>
-                                <p>Sed ut perspiciatis unde omnis iste
-                                    natus error sit voluptatem accusante
-                                    um doloremque laudantium totam
-                                    rem aperiam eaque ipsa </p>
+                                <p>What if we ate the problem? What if we connect surplus food from retailers to consumers for a lower price? As a result, users eat great food for less and businesses receive an additional revenue stream — all while together reducing food waste.</p>
                             </div><!-- /.service-five__single-inner -->
                         </div><!-- /.service-five__single -->
                     </div><!-- /.col-lg-4 -->
@@ -142,11 +137,8 @@
                                 <div class="service-five__icon">
                                     <i class="far fa-unlock-alt"></i>
                                 </div><!-- /.service-five__icon -->
-                                <h3><a href="#">The Idea </a></h3>
-                                <p>Sed ut perspiciatis unde omnis iste
-                                    natus error sit voluptatem accusante
-                                    um doloremque laudantium totam
-                                    rem aperiam eaque ipsa </p>
+                                <h3><a href="#">The App </a></h3>
+                                <p>Manna, is a food rescue app that allows retailers to sell their surplus food to consumers at a lower price - instead of having great food go to waste.</p>
                             </div><!-- /.service-five__single-inner -->
                         </div><!-- /.service-five__single -->
                     </div><!-- /.col-lg-4 -->
@@ -158,7 +150,7 @@
             <div class="container-fluid">
                 <div class="cta-nine__block">
                     <h3>We are not only solving food waste, we are bringing food to you.</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam <br> rem aperiam eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae</p>
+                    <p>New and smart technology solves the hardest problems. This platform can help eradicate food waste. Do you want to join our Mannazing team?</p>
                 </div><!-- /.cta-nine__block -->
 
                 <div class="row">
@@ -214,9 +206,7 @@
                                     all food is wasted. <br>
                                     We're changing that.</h3>
                                 </div><!-- /.block-title-two -->
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                    laboris nisi ut aliquip ex ea commodo consequat. </p>
+                                <p>In fact, the environmental impact of food waste is 4 times greater than all airplane flights combined, costing $750 billion annually. The problem is stupid, really stupid.</p>
                                 <a href="#" class="thm-btn">Get Started <i class="fa fa-angle-double-right"></i></a>
                                 <!-- /.thm-btn -->
                             </div><!-- /.service-two__block -->
@@ -227,12 +217,12 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="service-two__single js-tilt">
-                                        <div class="service-two__single-image" ></div>
+                                        <div class="service-two__single-image"></div>
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-hand-holding-usd"></i>
                                             <h3><a href="#">All food should be eaten.</a></h3>
-                                            <p>One-third of all food produced is thrown away annually.</p>
+                                            <p>We refuse to tolerate the status quo surrounding food waste and hunger because the ratio of food wasted to food needed just doesn’t make sense.</p>
                                             <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
                                             <!-- /.service-two__link -->
                                         </div><!-- /.service-two__single-inner -->
@@ -245,7 +235,7 @@
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-umbrella-beach"></i>
                                             <h3><a href="#">Let’s fight waste together!</a></h3>
-                                            <p>Resulting in 1.3 billion tonnes of waste worldwide. With Karma you can rescue unsold meals with a discount.</p>
+                                            <p>The causes of food waste or loss are numerous and occur throughout the food system, during production, processing, distribution, retail and consumption.</p>
                                             <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
                                             <!-- /.service-two__link -->
                                         </div><!-- /.service-two__single-inner -->
@@ -258,7 +248,7 @@
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-paper-plane"></i>
                                             <h3><a href="#">Good for the wallet</a></h3>
-                                            <p>One-third of all food produced is thrown away annually.</p>
+                                            <p>We don’t just offer diverse meal options to you, we help you save enough to afford another when the time comes.</p>
                                             <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
                                             <!-- /.service-two__link -->
                                         </div><!-- /.service-two__single-inner -->
@@ -271,7 +261,7 @@
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-chart-network"></i>
                                             <h3><a href="#">Good for the planet</a></h3>
-                                            <p>Resulting in 1.3 billion tonnes of waste worldwide. With Karma you can rescue unsold meals with a discount.</p>
+                                            <p>By understanding the problem and making conscious decisions we can change that, and reduce the CO2 emissions caused as a result of this waste.</p>
                                             <a href="#" class="service-two__link"><i class="fa fa-long-arrow-alt-right"></i></a>
                                             <!-- /.service-two__link -->
                                         </div><!-- /.service-two__single-inner -->
@@ -329,69 +319,8 @@
                     </div><!-- /.item -->
                 </div><!-- /.brand-one__carousel owl-carousel owl-theme thm__owl-carousel -->
             </div><!-- /.container -->
-        </section><!-- /.brand-one -->
+        </section>
 
-        <section class="progress-one mag-bottom">
-            <img src="../assets/images/shapes/progress-bg-1.png" alt="" class="progress-one__bg">
-            <div class="container">
-                <img src="../assets/images/newImages/img8.jpg" alt="" class="progress-one__moc">
-                <div class="row justify-content-end">
-                    <div class="col-lg-6">
-                        <div class="progress-one__content">
-                            <div class="block-title text-left">
-                                <h3>Know Some Facts <br> About Us</h3>
-                                <div class="block-title__line"></div><!-- /.block-title__line -->
-                            </div><!-- /.block-title -->
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed eiusmod tempor incid idunt ut labore
-                                et dolore magna aliqua. Ut enim ad minim veniam</p>
-
-                            <div class="progress-one__progress-wrap">
-                                <div class="progress-one__progress__bar">
-                                    <div class="progress-one__progress__bar-top">
-                                        <h3>Lorem Ipsum Blabla</h3>
-                                    </div><!-- /.progress-one__progress__bar-top -->
-                                    <div class="progress-one__progress__bar-line">
-
-                                        <span class="wow fadeIn" data-wow-duration="1500ms" style="width: 95%; background-color: #3f02a8;">
-                                            <b>95%</b></span>
-                                    </div><!-- /.progress-one__progress__bar-line -->
-                                </div><!-- /.progress-one__progress__bar -->
-                                <div class="progress-one__progress__bar">
-                                    <div class="progress-one__progress__bar-top">
-                                        <h3>Lorem Ipsum Blabla</h3>
-                                    </div><!-- /.progress-one__progress__bar-top -->
-                                    <div class="progress-one__progress__bar-line">
-
-                                        <span class="wow fadeIn" data-wow-duration="1500ms" style="width: 87%; background-color: #ff57a4;">
-                                            <b>87%</b></span>
-                                    </div><!-- /.progress-one__progress__bar-line -->
-                                </div><!-- /.progress-one__progress__bar -->
-                                <div class="progress-one__progress__bar">
-                                    <div class="progress-one__progress__bar-top">
-                                        <h3>Lorem Ipsum Blabla</h3>
-                                    </div><!-- /.progress-one__progress__bar-top -->
-                                    <div class="progress-one__progress__bar-line">
-
-                                        <span class="wow fadeIn" data-wow-duration="1500ms" style="width: 63%; background-color: #00c8b3;">
-                                            <b>63%</b></span>
-                                    </div><!-- /.progress-one__progress__bar-line -->
-                                </div><!-- /.progress-one__progress__bar -->
-                                <div class="progress-one__progress__bar">
-                                    <div class="progress-one__progress__bar-top">
-                                        <h3>Lorem Ipsum Blabla</h3>
-                                    </div><!-- /.progress-one__progress__bar-top -->
-                                    <div class="progress-one__progress__bar-line">
-
-                                        <span class="wow fadeIn" data-wow-duration="1500ms" style="width: 55%; background-color: #ff9b0d;">
-                                            <b>55%</b></span>
-                                    </div><!-- /.progress-one__progress__bar-line -->
-                                </div><!-- /.progress-one__progress__bar -->
-                            </div><!-- /.progress-one__progress-wrap -->
-                        </div><!-- /.progress-one__content -->
-                    </div><!-- /.col-lg-6 -->
-                </div><!-- /.row justify-content-end -->
-            </div><!-- /.container -->
-        </section><!-- /.progress-one -->
 
         <div class="site-footer-two">
             <img src="../assets/images/shapes/footer-shape-2-1.png" alt="" class="site-footer-two__shape-1">
