added in the box

--- a/boxes/index.html
+++ b/boxes/index.html
@@ -188,6 +188,7 @@
                                         </li>
                                     </ul><!-- /.list-unstyled video-one__list -->
                                     <!-- /.thm-btn -->
+                                    <a href="/inthebox" class="thm-btn banner-two__btn">What is in the Box?</a><!-- /.thm-btn -->
                                 </div><!-- /.video-one__content -->
                             </div><!-- /.my-auto -->
                         </div><!-- /.col-lg-6 -->
