--- a/about/index.html
+++ b/about/index.html
@@ -333,7 +333,7 @@
                                 <a href="/">
                                     <img src="../assets/images/logo-2-2.png" alt="">
                                 </a>
-                                <p>But we must ipsum dolor sit amet con sectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+                                <p>Creating the world's first zero food waste generation.</p>
                                 <div class="footer-widget__social">
                                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -346,7 +346,6 @@
                             <div class="footer-widget footer-widget__links">
                                 <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
                                 <ul class="footer-widget__links-list list-unstyled">
-                                    <li><a href="/about">About Us</a></li>
                                     <li><a href="/boxes">Manna Boxes</a></li>
                                     <li><a href="/business">Manna Business</a></li>
                                     <li><a href="/employees">Manna Employees</a></li>
@@ -356,9 +355,9 @@
                         </div><!-- /.col-lg-3 -->
                         <div class="col-xl-3 col-lg-6">
                             <div class="footer-widget footer-widget__links">
-                                <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
+                                <h3 class="footer-widget__title">Check us out</h3><!-- /.footer-widget__title -->
                                 <ul class="footer-widget__links-list list-unstyled">
-                                    <li><a href="/invite">Invite Friends?</a></li>
+                                    <li><a href="/about">About Us</a></li>
                                     <li><a href="/contact">Contact Us</a></li>
                                     <li><a href="/invite">Invite Friends?</a></li>
                                     <li><a href="/blog">Blog</a></li>
@@ -377,11 +376,11 @@
                                 <ul class="footer-widget__contact-list list-unstyled">
                                     <li>
                                         <i class="far fa-envelope"></i>
-                                        <a href="mailto:support@gmail.com">support@gmail.com</a>
+                                        <a href="mailto:support@gmail.com">support@getmanna.ng</a>
                                     </li>
                                     <li>
                                         <i class="far fa-phone"></i>
-                                        <a href="tel:+823-654-445-64">+823 654 445 64</a>
+                                        <a href="tel:+823-654-445-64">+2348064997824</a>
                                     </li>
                                 </ul><!-- /.footer-widget__contact-list -->
                             </div><!-- /.footer-widget footer-widget__post -->
