--- a/boxes/index.html
+++ b/boxes/index.html
@@ -309,21 +309,21 @@
                         </div><!-- /.col-lg-3 col-md-6 -->
                         <div class="col-lg-3 col-md-6">
                             <div class="service-four__single">
-                                <i class="fal fa-recycle"></i>
+                                    <i class="fal fa-bullseye-arrow"></i>
                                 <h3>Simple & easy</h3>
                                 <p>Your weekly dose of fresh produce, delivered directly to your door hassle free. Good for you, good for the planet.</p>
                             </div><!-- /.service-four__single -->
                         </div><!-- /.col-lg-3 col-md-6 -->
                         <div class="col-lg-3 col-md-6">
                             <div class="service-four__single">
-                                <i class="fal fa-anchor"></i>
+                                    <i class="fal fa-bullseye-arrow"></i>
                                 <h3>Environmental impact</h3>
                                 <p>Taking into consideration the same 5-year period (2007-2012) in Nigeria, 3.4 million tonnes of greenhouse gases were avoided per year.</p>
                             </div><!-- /.service-four__single -->
                         </div><!-- /.col-lg-3 col-md-6 -->
                         <div class="col-lg-3 col-md-6">
                             <div class="service-four__single">
-                                <i class="fal fa-anchor"></i>
+                                    <i class="fal fa-bullseye-arrow"></i>
                                 <h3>On time delivery?</h3>
                                 <p>Plan your meals. Make a shopping list and rely on Manna’s delivery to make sure your package gets to you on record time, you’ll also save money!</p>
                             </div><!-- /.service-four__single -->
