--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Page || Bizkar || Creative Multi-Purpose HTML Template</title>
+    <title>Contact Page</title>
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicons/favicon-16x16.png">
@@ -96,7 +96,7 @@
             </div><!-- /.site-header-five__wrapper -->
 
 
-        <section class="page-header" style="background-image: url(assets/images/backgrounds/page-header-bg-1-1.jpg);">
+        <section class="page-header">
             <div class="container">
                 <h2>Contact Us</h2>
                 <ul class="list-unstyled thm-breadcrumb">
@@ -112,9 +112,8 @@
                     <div class="col-lg-5">
                         <div class="contact-two__content">
                             <div class="contact-two__block">
-                                <h3>Don't Hesitate To Contact Us</h3>
-                                <p>Sed ut perspiciatis unde omnis iste natus erro voluptat accusantium doloremque laudantium
-                                    totam rem aperiam eaque</p>
+                                <h3>Don't be a stranger.</h3>
+                                <p>Reach out, visit or text us your best food hack.</p>
                             </div><!-- /.contact-two__block -->
                             <ul class="list-unstyled contact-two__info-list">
                                 <li>
@@ -122,21 +121,21 @@
                                         <i class="far fa-map-marked"></i>
                                         Address :
                                     </div><!-- /.contact-two__info-list-title -->
-                                    <p>27 Division St, New York, <br>NY 10002,USA</p>
+                                    <p>26, Adebola House, <br> Allen Ikeja.</p>
                                 </li>
                                 <li>
-                                    <div class="contact-two__info-list-title">
-                                        <i class="far fa-phone"></i>
-                                        Call Us :
-                                    </div><!-- /.contact-two__info-list-title -->
-                                    <p><a href="tel:08964712365">08964712365</a></p>
-                                </li>
+                                        <div class="contact-two__info-list-title">
+                                            <i class="far fa-map-marked"></i>
+                                            Address :
+                                        </div><!-- /.contact-two__info-list-title -->
+                                        <p>23, Ifelodun Close, <br> Adams- Ojodu Lagos State.</p>
+                                    </li>
                                 <li>
                                     <div class="contact-two__info-list-title">
                                         <i class="far fa-envelope"></i>
-                                        Email Us :
+                                        Mail :
                                     </div><!-- /.contact-two__info-list-title -->
-                                    <p><a href="mailto:support@gmail.com">support@gmail.com</a></p>
+                                    <p><a href="mailto:support@gmail.com">support@getmanna.ng</a></p>
                                 </li>
                             </ul><!-- /.contact-two__info-list -->
                         </div><!-- /.contact-two__content -->
@@ -144,9 +143,8 @@
                     <div class="col-lg-7">
                         <form action="inc/sendemail.php" class="contact-form-validated contact-two__form">
                             <div class="contact-two__block">
-                                <h3>Get In Touch</h3>
-                                <p>Sed ut perspiciatis unde omnis iste natus erro voluptat accusantium <br>doloremque laudantium
-                                    totam rem aperiam eaque</p>
+                                <h3>Write to us</h3>
+                                <p>Go to Contact us under settings/menu in the app or submit a ticket on the following link.</p>
                             </div><!-- /.contact-two__block -->
                             <div class="row">
                                 <div class="col-md-6">
@@ -171,81 +169,79 @@
         </section><!-- /.contact-two -->
 
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4562.753041141002!2d-118.80123790098536!3d34.152323469614075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e82469c2162619%3A0xba03efb7998eef6d!2sCostco+Wholesale!5e0!3m2!1sbn!2sbd!4v1562518641290!5m2!1sbn!2sbd" class="google-map__contact" allowfullscreen></iframe>
         
         <div class="site-footer-two">
-            <img src="../assets/images/shapes/footer-shape-2-1.png" alt="" class="site-footer-two__shape-1">
-            <img src="../assets/images/shapes/footer-shape-2-2.png" alt="" class="site-footer-two__shape-2">
-            <div class="site-footer-two__upper">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-3 col-lg-6">
-                            <div class="footer-widget footer-widget__about">
-                                <a href="/">
-                                    <img src="../assets/images/logo-2-2.png" alt="">
-                                </a>
-                                <p>But we must ipsum dolor sit amet con sectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
-                                <div class="footer-widget__social">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                                    <a href="#"><i class="fab fa-behance"></i></a>
-                                </div><!-- /.footer-widget__social -->
-                            </div><!-- /.footer-widget footer-widget__about -->
-                        </div><!-- /.col-lg-3 -->
-                        <div class="col-xl-3 col-lg-6">
-                            <div class="footer-widget footer-widget__links">
-                                <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
-                                <ul class="footer-widget__links-list list-unstyled">
-                                    <li><a href="/about">About Us</a></li>
-                                    <li><a href="/boxes">Manna Boxes</a></li>
-                                    <li><a href="/business">Manna Business</a></li>
-                                    <li><a href="/employees">Manna Employees</a></li>
-                                    <li><a href="/about-food">About Food Waste</a></li>
-                                </ul><!-- /.footer-widget__links-list -->
-                            </div><!-- /.footer-widget footer-widget__post -->
-                        </div><!-- /.col-lg-3 -->
-                        <div class="col-xl-3 col-lg-6">
-                            <div class="footer-widget footer-widget__links">
-                                <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
-                                <ul class="footer-widget__links-list list-unstyled">
-                                    <li><a href="/invite">Invite Friends?</a></li>
-                                    <li><a href="/contact">Contact Us</a></li>
-                                    <li><a href="/invite">Invite Friends?</a></li>
-                                    <li><a href="/blog">Blog</a></li>
-                                </ul><!-- /.footer-widget__links-list -->
-                            </div><!-- /.footer-widget footer-widget__post -->
-                        </div><!-- /.col-lg-3 -->
-                        <div class="col-xl-3 col-lg-6">
-                            <div class="footer-widget footer-widget__contact">
-                                <h3 class="footer-widget__title">Newsletters</h3><!-- /.footer-widget__title -->
-                                <p>Subscribe our newsletters to get more
-                                    update and many more</p>
-                                <form action="#" class="footer__mc-form">
-                                    <input type="text" placeholder="Enter Your Email">
-                                    <button type="submit"><i class="fa fa-long-arrow-alt-right"></i></button>
-                                </form><!-- /.footer__mc-form -->
-                                <ul class="footer-widget__contact-list list-unstyled">
-                                    <li>
-                                        <i class="far fa-envelope"></i>
-                                        <a href="mailto:support@gmail.com">support@gmail.com</a>
-                                    </li>
-                                    <li>
-                                        <i class="far fa-phone"></i>
-                                        <a href="tel:+823-654-445-64">+823 654 445 64</a>
-                                    </li>
-                                </ul><!-- /.footer-widget__contact-list -->
-                            </div><!-- /.footer-widget footer-widget__post -->
-                        </div><!-- /.col-lg-3 -->
-                    </div><!-- /.row -->
-                </div><!-- /.container -->
-            </div><!-- /.site-footer-two__upper -->
-            <div class="site-footer-two__bottom">
-                <div class="container">
-                    <p>Copyright@2021 <a href="#">Manna</a>. All Right Reserved.</p>
-                </div><!-- /.container -->
-            </div><!-- /.site-footer-two__bottom -->
-        </div><!-- /.site-footer-two -->
+                <img src="assets/images/shapes/footer-shape-2-1.png" alt="" class="site-footer-two__shape-1">
+                <img src="assets/images/shapes/footer-shape-2-2.png" alt="" class="site-footer-two__shape-2">
+                <div class="site-footer-two__upper">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-3 col-lg-6">
+                                <div class="footer-widget footer-widget__about">
+                                    <a href="/">
+                                        <img src="../assets/images/logo-2-2.png" alt="">
+                                    </a>
+                                    <p>Creating the world's first zero food waste generation.</p>
+                                    <div class="footer-widget__social">
+                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                        <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                                        <a href="#"><i class="fab fa-behance"></i></a>
+                                    </div><!-- /.footer-widget__social -->
+                                </div><!-- /.footer-widget footer-widget__about -->
+                            </div><!-- /.col-lg-3 -->
+                            <div class="col-xl-3 col-lg-6">
+                                <div class="footer-widget footer-widget__links">
+                                    <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
+                                    <ul class="footer-widget__links-list list-unstyled">
+                                        <li><a href="/boxes">Manna Boxes</a></li>
+                                        <li><a href="/business">Manna Business</a></li>
+                                        <li><a href="/employees">Manna Employees</a></li>
+                                        <li><a href="/about-food">About Food Waste</a></li>
+                                    </ul><!-- /.footer-widget__links-list -->
+                                </div><!-- /.footer-widget footer-widget__post -->
+                            </div><!-- /.col-lg-3 -->
+                            <div class="col-xl-3 col-lg-6">
+                                <div class="footer-widget footer-widget__links">
+                                    <h3 class="footer-widget__title">Check us out</h3><!-- /.footer-widget__title -->
+                                    <ul class="footer-widget__links-list list-unstyled">
+                                        <li><a href="/about">About Us</a></li>
+                                        <li><a href="/contact">Contact Us</a></li>
+                                        <li><a href="/invite">Invite Friends?</a></li>
+                                        <li><a href="/blog">Blog</a></li>
+                                    </ul><!-- /.footer-widget__links-list -->
+                                </div><!-- /.footer-widget footer-widget__post -->
+                            </div><!-- /.col-lg-3 -->
+                            <div class="col-xl-3 col-lg-6">
+                                <div class="footer-widget footer-widget__contact">
+                                    <h3 class="footer-widget__title">Newsletters</h3><!-- /.footer-widget__title -->
+                                    <p>Subscribe our newsletters to get more
+                                        update and many more</p>
+                                    <form action="#" class="footer__mc-form">
+                                        <input type="text" placeholder="Enter Your Email">
+                                        <button type="submit"><i class="fa fa-long-arrow-alt-right"></i></button>
+                                    </form><!-- /.footer__mc-form -->
+                                    <ul class="footer-widget__contact-list list-unstyled">
+                                        <li>
+                                            <i class="far fa-envelope"></i>
+                                            <a href="mailto:support@gmail.com">support@getmanna.ng</a>
+                                        </li>
+                                        <li>
+                                            <i class="far fa-phone"></i>
+                                            <a href="tel:+823-654-445-64">+2348064997824</a>
+                                        </li>
+                                    </ul><!-- /.footer-widget__contact-list -->
+                                </div><!-- /.footer-widget footer-widget__post -->
+                            </div><!-- /.col-lg-3 -->
+                        </div><!-- /.row -->
+                    </div><!-- /.container -->
+                </div><!-- /.site-footer-two__upper -->
+                <div class="site-footer-two__bottom">
+                    <div class="container">
+                        <p>Copyright@2021 <a href="#">Manna</a>. All Right Reserved.</p>
+                    </div><!-- /.container -->
+                </div><!-- /.site-footer-two__bottom -->
+            </div><!-- /.site-footer-two -->
     </div><!-- /.page-wrapper -->
 
 
