--- a/invite/index.html
+++ b/invite/index.html
@@ -89,10 +89,11 @@
                 </header><!-- /.site-header-one -->
             </div><!-- /.site-header-five__wrapper -->
 
-        <section class="cta-eight text-center mag-top">
+        <section class="cta-eight text-center mag-top pad-30-bottom">
             <div class="cta-eight__content">
                 <h3>Share good <br> Manna</h3>
-                <p>Invite your friends to Karma and fight food waste together <br> rem aperiam eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae</p>
+                <p>Invite your friends to Karma and fight food waste together <br> Everything's better with friends, especially when fighting food waste.
+                </p>
             </div><!-- /.cta-eight__content -->
             <div class="portfolio-one__more-btn__block text-center">
                 <a href="#" class="thm-btn portfolio-one__more-btn">Download App </a>
@@ -106,7 +107,6 @@
             <div class="container">
                 <div class="block-title-two text-center block-title-two__home-five">
                     <p>Invite your friends </p>
-                    <h3>Everything's better with friends, especially when fighting food waste</h3>
                 </div><!-- /.block-title-two -->
                 <div class="step-one__single">
                     <div class="step-one__image wow fadeInLeft" data-wow-duration="1500ms">
@@ -155,78 +155,77 @@
 
 
         <div class="site-footer-two">
-            <img src="../assets/images/shapes/footer-shape-2-1.png" alt="" class="site-footer-two__shape-1">
-            <img src="../assets/images/shapes/footer-shape-2-2.png" alt="" class="site-footer-two__shape-2">
-            <div class="site-footer-two__upper">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-3 col-lg-6">
-                            <div class="footer-widget footer-widget__about">
-                                <a href="/">
-                                    <img src="../assets/images/logo-2-2.png" alt="">
-                                </a>
-                                <p>But we must ipsum dolor sit amet con sectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
-                                <div class="footer-widget__social">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                                    <a href="#"><i class="fab fa-behance"></i></a>
-                                </div><!-- /.footer-widget__social -->
-                            </div><!-- /.footer-widget footer-widget__about -->
-                        </div><!-- /.col-lg-3 -->
-                        <div class="col-xl-3 col-lg-6">
-                            <div class="footer-widget footer-widget__links">
-                                <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
-                                <ul class="footer-widget__links-list list-unstyled">
-                                    <li><a href="/about">About Us</a></li>
-                                    <li><a href="/boxes">Manna Boxes</a></li>
-                                    <li><a href="/business">Manna Business</a></li>
-                                    <li><a href="/employees">Manna Employees</a></li>
-                                    <li><a href="/about-food">About Food Waste</a></li>
-                                </ul><!-- /.footer-widget__links-list -->
-                            </div><!-- /.footer-widget footer-widget__post -->
-                        </div><!-- /.col-lg-3 -->
-                        <div class="col-xl-3 col-lg-6">
-                            <div class="footer-widget footer-widget__links">
-                                <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
-                                <ul class="footer-widget__links-list list-unstyled">
-                                    <li><a href="/invite">Invite Friends?</a></li>
-                                    <li><a href="/contact">Contact Us</a></li>
-                                    <li><a href="/invite">Invite Friends?</a></li>
-                                    <li><a href="/blog">Blog</a></li>
-                                </ul><!-- /.footer-widget__links-list -->
-                            </div><!-- /.footer-widget footer-widget__post -->
-                        </div><!-- /.col-lg-3 -->
-                        <div class="col-xl-3 col-lg-6">
-                            <div class="footer-widget footer-widget__contact">
-                                <h3 class="footer-widget__title">Newsletters</h3><!-- /.footer-widget__title -->
-                                <p>Subscribe our newsletters to get more
-                                    update and many more</p>
-                                <form action="#" class="footer__mc-form">
-                                    <input type="text" placeholder="Enter Your Email">
-                                    <button type="submit"><i class="fa fa-long-arrow-alt-right"></i></button>
-                                </form><!-- /.footer__mc-form -->
-                                <ul class="footer-widget__contact-list list-unstyled">
-                                    <li>
-                                        <i class="far fa-envelope"></i>
-                                        <a href="mailto:support@gmail.com">support@gmail.com</a>
-                                    </li>
-                                    <li>
-                                        <i class="far fa-phone"></i>
-                                        <a href="tel:+823-654-445-64">+823 654 445 64</a>
-                                    </li>
-                                </ul><!-- /.footer-widget__contact-list -->
-                            </div><!-- /.footer-widget footer-widget__post -->
-                        </div><!-- /.col-lg-3 -->
-                    </div><!-- /.row -->
-                </div><!-- /.container -->
-            </div><!-- /.site-footer-two__upper -->
-            <div class="site-footer-two__bottom">
-                <div class="container">
-                    <p>Copyright@2021 <a href="#">Manna</a>. All Right Reserved.</p>
-                </div><!-- /.container -->
-            </div><!-- /.site-footer-two__bottom -->
-        </div><!-- /.site-footer-two -->
+                <img src="assets/images/shapes/footer-shape-2-1.png" alt="" class="site-footer-two__shape-1">
+                <img src="assets/images/shapes/footer-shape-2-2.png" alt="" class="site-footer-two__shape-2">
+                <div class="site-footer-two__upper">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-3 col-lg-6">
+                                <div class="footer-widget footer-widget__about">
+                                    <a href="/">
+                                        <img src="../assets/images/logo-2-2.png" alt="">
+                                    </a>
+                                    <p>Creating the world's first zero food waste generation.</p>
+                                    <div class="footer-widget__social">
+                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                        <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                                        <a href="#"><i class="fab fa-behance"></i></a>
+                                    </div><!-- /.footer-widget__social -->
+                                </div><!-- /.footer-widget footer-widget__about -->
+                            </div><!-- /.col-lg-3 -->
+                            <div class="col-xl-3 col-lg-6">
+                                <div class="footer-widget footer-widget__links">
+                                    <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
+                                    <ul class="footer-widget__links-list list-unstyled">
+                                        <li><a href="/boxes">Manna Boxes</a></li>
+                                        <li><a href="/business">Manna Business</a></li>
+                                        <li><a href="/employees">Manna Employees</a></li>
+                                        <li><a href="/about-food">About Food Waste</a></li>
+                                    </ul><!-- /.footer-widget__links-list -->
+                                </div><!-- /.footer-widget footer-widget__post -->
+                            </div><!-- /.col-lg-3 -->
+                            <div class="col-xl-3 col-lg-6">
+                                <div class="footer-widget footer-widget__links">
+                                    <h3 class="footer-widget__title">Check us out</h3><!-- /.footer-widget__title -->
+                                    <ul class="footer-widget__links-list list-unstyled">
+                                        <li><a href="/about">About Us</a></li>
+                                        <li><a href="/contact">Contact Us</a></li>
+                                        <li><a href="/invite">Invite Friends?</a></li>
+                                        <li><a href="/blog">Blog</a></li>
+                                    </ul><!-- /.footer-widget__links-list -->
+                                </div><!-- /.footer-widget footer-widget__post -->
+                            </div><!-- /.col-lg-3 -->
+                            <div class="col-xl-3 col-lg-6">
+                                <div class="footer-widget footer-widget__contact">
+                                    <h3 class="footer-widget__title">Newsletters</h3><!-- /.footer-widget__title -->
+                                    <p>Subscribe our newsletters to get more
+                                        update and many more</p>
+                                    <form action="#" class="footer__mc-form">
+                                        <input type="text" placeholder="Enter Your Email">
+                                        <button type="submit"><i class="fa fa-long-arrow-alt-right"></i></button>
+                                    </form><!-- /.footer__mc-form -->
+                                    <ul class="footer-widget__contact-list list-unstyled">
+                                        <li>
+                                            <i class="far fa-envelope"></i>
+                                            <a href="mailto:support@gmail.com">support@getmanna.ng</a>
+                                        </li>
+                                        <li>
+                                            <i class="far fa-phone"></i>
+                                            <a href="tel:+823-654-445-64">+2348064997824</a>
+                                        </li>
+                                    </ul><!-- /.footer-widget__contact-list -->
+                                </div><!-- /.footer-widget footer-widget__post -->
+                            </div><!-- /.col-lg-3 -->
+                        </div><!-- /.row -->
+                    </div><!-- /.container -->
+                </div><!-- /.site-footer-two__upper -->
+                <div class="site-footer-two__bottom">
+                    <div class="container">
+                        <p>Copyright@2021 <a href="#">Manna</a>. All Right Reserved.</p>
+                    </div><!-- /.container -->
+                </div><!-- /.site-footer-two__bottom -->
+            </div><!-- /.site-footer-two -->
 
 
     </div><!-- /.page-wrapper -->
