--- a/boxes/index.html
+++ b/boxes/index.html
@@ -152,7 +152,7 @@
                 </div><!-- /.container -->
             </section><!-- /.banner-two -->
 
-            <section class="video-one">
+            <section class="video-one mobile-mar-up">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
