--- a/business/index.html
+++ b/business/index.html
@@ -163,7 +163,7 @@
                         <div class="my-auto">
                             <div class="funfact-one__block">
                                 <div class="block-title-two text-left">
-                                    <h3>86% of items on Karma sells in minutes</h3>
+                                    <h3>86% of items on Manna sells in minutes</h3>
                                 </div><!-- /.block-title-two text-left -->
                                 <a href="#" class="thm-btn funfact-one__btn">See Case <i class="fa fa-angle-double-right"></i></a>
                                 <!-- /.thm-btn funfact-one__btn -->
