chnaged karma to manna

--- a/about-food/index.html
+++ b/about-food/index.html
@@ -319,7 +319,7 @@
                         </div><!-- /.step-one__image-inner -->
                     </div><!-- /.step-one__image -->
                     <div class="step-one__content">
-                        <h3>Use Karma!</h3>
+                        <h3>Use Manna!</h3>
                         <p>To buy food at half price, before it ends up in the bin. Find great food near you</p>
                     </div><!-- /.step-one__content -->
                 </div><!-- /.step-one__single -->
@@ -329,7 +329,7 @@
         <section class="service-seven">
             <div class="container">
                 <div class="block-title-two text-center">
-                    <p>What you and Karma together rescued so far</p>
+                    <p>What you and Manna together rescued so far</p>
                     <h3>Together, we’re <br> making an impact </h3>
                 </div><!-- /.block-title-two -->
                 <div class="row">
