--- a/about/index.html
+++ b/about/index.html
@@ -97,7 +97,7 @@
                                 <h4>About Manna <span>New</span></h4>
                                 <h3>Food has an expiry date <br>
                                     <span>our planet shouldn't</span></h3>
-                                <p>The food industry is unsustainable in its attitudes towards waste. Karma is changing this whilst helping to turn surplus into a business opportunity.</p>
+                                <p>The food industry is unsustainable in its attitudes towards waste. Manna is changing this whilst helping to turn surplus into a business opportunity.</p>
                                 <a href="#" class="thm-btn banner-two__btn">Order my Box <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
                             </div><!-- /.banner-two__content -->
                         </div><!-- /.col-xl-7 -->
