--- a/boxes/index.html
+++ b/boxes/index.html
@@ -259,7 +259,7 @@
                                     </div>
                                     <div class="accrodion ">
                                         <div class="accrodion-title">
-                                            <h4>Can I buy the Karma box in the Manna app?</h4>
+                                            <h4>Can I buy the Manna box in the Manna app?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
@@ -279,7 +279,7 @@
                                     </div>
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>You don't seem to be delivering the Karma box to my area, what do I do?</h4>
+                                            <h4>You don't seem to be delivering the Manna box to my area, what do I do?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
