--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                 <h3>Good for the wallet,  <br> Good for the earth</h3>
                                 <div class="block-title__line"></div><!-- /.block-title__line -->
                             </div><!-- /.block-title -->
-                            <p>One-third of all food produced is thrown away annually, resulting in 1.3 billion tonnes of waste worldwide. With Karma you can rescue unsold meals with a discount.</p>
+                            <p>One-third of all food produced is thrown away annually, resulting in 1.3 billion tonnes of waste worldwide. With Manna you can rescue unsold meals with a discount.</p>
                             <div class="about-two__box">
                                 <div class="about-two__box-icon">
                                     <i class="far fa-leaf"></i>
