--- a/inthebox/index.html
+++ b/inthebox/index.html
@@ -94,7 +94,7 @@
                         <div class="col-lg-6">
                             <div class="about-five__content">
                                 <div class="block-title-two text-left">
-                                    <h3>What you’ll find in your Karma Box?</h3>
+                                    <h3>What you’ll find in your Manna Box?</h3>
                                 </div><!-- /.block-title-two -->
                                 <p>Firstly there is our delicious fruit and veg! This produce is sourced from wholesalers and farms across Nigeria, in particular Lagos and Ogun - that would otherwise have been wasted for several different reasons. <br/>
                                     Sadly, lots of fruit and vegetables are wasted before they end up in the supermarket. Sometimes they are too big, sometimes too small - or perhaps they are misshapen. The same goes for other products too. During our time fighting food waste, we have got to know many like-minded brands that want to eliminate food waste too. <br/> <br/>For some, it is pretty tricky. Supermarkets often won’t let them add products to their shelves that are nearing the end of their life, but they’re still perfectly delicious and have weeks left to enjoy them. That’s where the Manna Boxes come in. We can partner up with these brands, to feature as surprise guests in your box. Good for you, and great for the planet! In the past, our box has featured surplus products from Innocent, KIND, Bonne Maman and many others! 
@@ -125,7 +125,7 @@
                             <div class="col-lg-6">
                                 <div class="about-five__content">
                                     <div class="block-title-two text-left">
-                                        <h3>What you’ll find in your Karma Box?</h3>
+                                        <h3>What you’ll find in your Manna Box?</h3>
                                     </div><!-- /.block-title-two -->
                                     <p>We’re always looking for great partners for our box, whether you’re from a wholesaler or from a brand that wants to reduce its surplus waste!
                                         <br> <br>
