--- a/invite/index.html
+++ b/invite/index.html
@@ -92,7 +92,7 @@
         <section class="cta-eight text-center mag-top pad-30-bottom">
             <div class="cta-eight__content">
                 <h3>Share good <br> Manna</h3>
-                <p>Invite your friends to Karma and fight food waste together <br> Everything's better with friends, especially when fighting food waste.
+                <p>Invite your friends to Manna and fight food waste together <br> Everything's better with friends, especially when fighting food waste.
                 </p>
             </div><!-- /.cta-eight__content -->
             <div class="portfolio-one__more-btn__block text-center">
